hw_03/k_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k-deployment
  labels:
    app: k-deployment
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: k-app
          image: slow3586/micro_0224_skv:hw_02
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
