hw_03/k_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k-service
spec:
  type: NodePort
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
