hw_03/k_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: k-service
                port:
                  number: 80
